[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "khulnasoft_jupyter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
requires-nodejs = ">=18"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyter_server>=2.0.1,<3"
]
dynamic = ["version", "description", "authors", "keywords", "urls"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["khulnasoft_jupyter/labextension", "khulnasoft_jupyter/dist"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"khulnasoft_jupyter/labextension" = "share/jupyter/labextensions/khulnasoft_jupyter"
"install.json" = "share/jupyter/labextensions/khulnasoft_jupyter/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.targets.wheel.force-include]
"khulnasoft_jupyter/dist" = "khulnasoft_jupyter/dist"

[tool.hatch.build.hooks.version]
path = "khulnasoft_jupyter/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "khulnasoft_jupyter/labextension/static/style.js",
    "khulnasoft_jupyter/labextension/package.json",
]
skip-if-exists = ["khulnasoft_jupyter/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "khulnasoft_jupyter/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
